Make LoggingTest.CheckCausesDistinctBreakpoints work on clang win

Clang coalesces the int3s of the simple implementation of CHECK as
__debugbreak(). To avoid this, add an additional null deref following
the __debugbreak() when __clang__ to uniquify crash locations.

R=thakis@chromium.org
BUG=693713

Review-Url: https://codereview.chromium.org/2701253005
Cr-Commit-Position: refs/heads/master@{#451660}

Former-commit-id: 92bbdc39154ce7cbbc939d9a4c5ee371691ab811